deployment/kubernetes/frontend/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikoverflow-frontend
  namespace: devteam-kszk-bme-hu
  labels:
    app: vikoverflow
    component: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: vikoverflow
      component: frontend
  template:
    metadata:
      labels:
        app: vikoverflow
        component: frontend
    spec:
      containers:
      - name: vikoverflow-frontend
        image: registry.k8s.sch.bme.hu/vikoverflow/vikoverflow-frontend:0.0.14
        imagePullPolicy: Always
        ports:
        - containerPort: 80
