deployment/kubernetes/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikoverflow-frontend
  namespace: devteam-kszk-bme-hu
  labels:
    app: vikoverflow
    component: frontend
spec:
  ports:
  - name: vikoverflow-frontend
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: vikoverflow
    component: frontend
  type: ClusterIP
